# qualys-mcp_adv

./: .gitignore  LICENSE  README.md  benchmark.py  benchmark_baseline.json  eval.py  go.mod  go.sum  policies.example.json  policies.yaml.example  pyproject.toml  qualys_mcp.py  test_mcp.sh  test_tools.sh
.claude/agents/: qualys-api-expert.md
.github/workflows/: ci.yml  nightly.yml  notify.yml  release.yml
blog/: building-a-secure-mcp-server-for-qualys.md  conversational-secops-qualys-mcp.md
cmd/gateway/: main.go
cmd/qualys-mcp/: main.go
config/: config.go
docs/: architecture.md  examples.md  gaps.md  index.html  netlify.toml  performance.md  qualys-api-guide.md  query-languages.md  questions.md
docs/architecture/: index.html
docs/css/: style.css
docs/examples/: index.html
docs/gaps/: index.html
docs/getting-started/: configuration.html  index.html  installation.html
docs/js/: nav.js
docs/performance/: index.html
docs/questions/: index.html
docs/tools/: asset-management.html  cloud-security.html  compliance.html  index.html  operations.html  threat-intelligence.html  vulnerability-management.html
eval/: README.md  __init__.py  __main__.py  conversations.json  conversations.py  eval_live_results.txt  generate_variants.py  judge.py  live_results.json  parser.py  question_variants.json  recover_nightly.py  reporter.py  routing_eval.py  run_headless_claude.py  run_nightly.py  run_routing_eval.sh  run_stress_test.py  runner.py  updater.py  v3_conversations.json  v3_focus_test.json  v3_routing_questions.json  v3_routing_variants.json  v3_stress_test.json
eval_results/: nightly_2026-04-30.json  nightly_2026-05-01.json  nightly_2026-05-02.json  nightly_2026-05-04.json  nightly_2026-05-06.json  nightly_2026-05-07.json  nightly_2026-05-08.json  nightly_2026-05-09.json  nightly_2026-05-10.json  nightly_2026-05-12.json  nightly_2026-05-13.json  nightly_2026-05-14.json  nightly_2026-05-15.json  nightly_2026-05-16.json
internal/auth/: keychain.go  token.go
internal/common/: http.go  models.go  pagination.go
internal/credentials/: keychain.go
internal/domain/: context.go  errors.go  types.go
internal/gateway/: auth.go  gateway.go  metrics.go
internal/logging/: logger.go
internal/middleware/: audit.go  chain.go  logging.go  ratelimit.go  recovery.go  validation.go  validation_test.go
internal/security/: audit.go  ratelimit.go  validation.go
internal/server/: server.go
npm/: README.md  package.json
npm/scripts/: install.js
pkg/policy/: policy.go  policy_test.go
qualys/: __init__.py  aggregators.py  api.py  cache.py  oauth.py
qualys/workflows/: __init__.py  assess_risk.py  compliance.py  investigate.py  overview.py  remediation.py
scripts/: api_manifest.json  compare_benchmark.py  crawl_qualys_docs.js  eval_live.py  eval_questions.sh  gap_analysis.py  post_pr_comment.py
tests/: run_conversations.py  test_concurrency.py  test_cross_workflow.py  test_dispatch.py  test_edge_cases.py  test_regression.py  test_synthesis.py
tests/conversations/: asset_drilldown.yaml  compliance_drill.yaml  cross_tool_context.yaml  cve_investigation.yaml  expiring_certs.yaml  filter_chaining.yaml  (+5 more)
(+36 files in other folders)
