[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qualys-mcp"
version = "2.5.2"
description = "MCP server for Qualys security APIs - natural language interaction with vulnerability, asset, and cloud security data"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Andrew Nelson", email = "andrew@nelssec.com" }
]
keywords = ["mcp", "qualys", "security", "vulnerability", "vmdr", "claude", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
requires-python = ">=3.9"
dependencies = [
    "fastmcp>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/nelssec/qualys-mcp"
Repository = "https://github.com/nelssec/qualys-mcp"
Issues = "https://github.com/nelssec/qualys-mcp/issues"

[project.scripts]
qualys-mcp = "qualys_mcp:main"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["qualys_mcp.py"]

[tool.hatch.build.targets.sdist]
include = [
    "qualys_mcp.py",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]
