[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qualys-mcp"
version = "0.3.0"
description = "MCP server connecting AI assistants to Qualys security data. Supports Claude Desktop (stdio) and Claude.ai (SSE + OAuth 2.0). 8 tools covering vulnerabilities, cloud, compliance, and remediation."
readme = "README.md"
license = "MIT"
authors = [
    { name = "Andrew Nelson", email = "andrew@nelssec.com" }
]
keywords = ["mcp", "qualys", "security", "vulnerability", "vmdr", "claude", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
requires-python = ">=3.9"
dependencies = [
    "fastmcp>=0.1.0",
]

[project.optional-dependencies]
eval = [
    "anthropic",
    "mcp",
    "python-dotenv",
    "pyyaml",
]
dev = [
    "pytest>=7.0",
]

[project.urls]
Homepage = "https://github.com/nelssec/qualys-mcp"
Repository = "https://github.com/nelssec/qualys-mcp"
Issues = "https://github.com/nelssec/qualys-mcp/issues"

[project.scripts]
qualys-mcp = "qualys_mcp:main"

[tool.hatch.build.targets.wheel]
packages = ["qualys", "."]
only-include = ["qualys_mcp.py", "qualys/"]

[tool.hatch.build.targets.sdist]
include = [
    "qualys_mcp.py",
    "qualys/",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]
